--- a/index.html
+++ b/index.html
@@ -1,167 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda || E-Commerce Website</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Panda || E-Commerce Website</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                  <img src="images/logo.png" alt="">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#shoe">Shoes</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#backpack">Backpack</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#subscribe">Subscribe</a>
-                  </li>
-                </ul>
-              </div>
+  <header class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#shoe">Shoes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#backpack">Backpack</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#subscribe">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="carouselExampleIndicators" class="carousel slide home-area section-margin" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7">
+              <h1>Mega LCD TV For Sports</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, placeat.</p>
+              <h1 class="color-highlighter">$1200</h1>
+              <button class="btn text-white rounded btn-bg">Buy Now</button>
             </div>
-          </nav>
-          <div id="carouselExampleIndicators" class="carousel slide home-area section-margin" data-bs-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <div class="row d-flex align-items-center p-5">
-                    <div class="col-md-7">
-                        <h1>Mega LCD TV For Sports</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, placeat.</p>
-                        <h1 class="color-highlighter">$1200</h1>
-                        <button class="btn text-white rounded btn-bg">Buy Now</button>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row d-flex align-items-center p-5">
-                    <div class="col-md-7">
-                        <h1>Cool Dude Headphone</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae hic ipsa at odit error reprehenderit animi quasi cum alias quisquam.</p>
-                        <h1 class="color-highlighter">$420</h1>
-                        <button class="btn text-white rounded btn-bg">Buy Now</button>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="row d-flex align-items-center p-5">
-                    <div class="col-md-7">
-                        <h1>X-Box for your living room</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis, beatae inventore enim harum quia quam qui nulla animi quis!</p>
-                        <h1 class="color-highlighter">$600</h1>
-                        <button class="btn text-white rounded btn-bg">Buy Now</button>
-                    </div>
-                    <div class="col-md-5">
-                        <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-              </div>
+            <div class="col-md-5">
+              <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
           </div>
-    </header>
-    <main class="container">
-        <section class="container overflow-hidden section-margin">
-            <div class="row gx-5">
-              <div class="col">
-               <div class="p-3 rounded-3 bg-warning d-flex align-items-center justify-content-around">
-                   <h1 class="text-white">Watch</h1>
-                   <img class="w-25" src="images/categories/watch.png" alt="">
-               </div>
-              </div>
-              <div class="col">
-                <div class="p-3 rounded-3 bg-success d-flex align-items-center justify-content-around">
-                    <h1 class="text-white">Bag</h1>
-                    <img class="w-25" src="images/categories/bag.png" alt="">
-                </div>
-              </div>
-              <div class="col">
-                <div class="p-3 rounded-3 bg-primary d-flex align-items-center justify-content-around">
-                    <h1 class="text-white">Shoes</h1>
-                    <img class="w-25" src="images/categories/shoes.png" alt="">
-                </div>
-              </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7">
+              <h1>Cool Dude Headphone</h1>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae hic ipsa at odit error reprehenderit
+                animi quasi cum alias quisquam.</p>
+              <h1 class="color-highlighter">$420</h1>
+              <button class="btn text-white rounded btn-bg">Buy Now</button>
             </div>
-        </section>
-        <section id="shoe" class="section-margin">
-            <h1>Shoes</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col shadow">
-                  <div class="card h-100">
-                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                     <div class="card-body">
-                      <h5 class="card-title">Supply 350</h5>
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
-                      <h5>$120</h5>
-                    </div>
-                    <div class="card-footer">
-                      <button class="btn btn-primary">Buy Now >></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card h-100">
-                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Nike 360</h5>
-                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                      <h5>$320</h5>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-primary">Buy Now >></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card h-100">
-                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Red Airmax</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
-                      <h5>$350</h5>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-primary">Buy Now >></button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        </section>
-    </main>
+            <div class="col-md-5">
+              <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="row d-flex align-items-center p-5">
+            <div class="col-md-7">
+              <h1>X-Box for your living room</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur blanditiis, beatae inventore enim
+                harum quia quam qui nulla animi quis!</p>
+              <h1 class="color-highlighter">$600</h1>
+              <button class="btn text-white rounded btn-bg">Buy Now</button>
+            </div>
+            <div class="col-md-5">
+              <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </a>
+    </div>
+  </header>
+  <main class="container">
+    <section class="container overflow-hidden section-margin">
+      <div class="row gx-5">
+        <div class="col">
+          <div class="p-3 rounded-3 bg-warning d-flex align-items-center justify-content-around">
+            <h1 class="text-white">Watch</h1>
+            <img class="w-25" src="images/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-3 rounded-3 bg-success d-flex align-items-center justify-content-around">
+            <h1 class="text-white">Bag</h1>
+            <img class="w-25" src="images/categories/bag.png" alt="">
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-3 rounded-3 bg-primary d-flex align-items-center justify-content-around">
+            <h1 class="text-white">Shoes</h1>
+            <img class="w-25" src="images/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="shoe" class="section-margin">
+      <h1>Shoes</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.
+              </p>
+              <h5>$120</h5>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5>$320</h5>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.
+              </p>
+              <h5>$350</h5>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="backpack" class="section-margin">
+      <h1>Backpack</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Laltu Bag</h5>
+              <h5>$120</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Niltu Bag</h5>
+              <h5>$320</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow card-style">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Kaltu Bag</h5>
+              <h5>$169</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer card-style">
+              <button class="btn text-white rounded btn-bg">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="subscribe" class="section-margin">
+      <h1>LET'S STAY IN TOUCH</h1>
+      <h5>Get updates on sales, specials and more</h5>
+      <div class="input-width">
+        <input class="input-border px-2" type="text">
+      </div>
+      <button class="btn text-white rounded btn-bg">SUBMIT</button>
+    </section>
+  </main>
 
-    <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
