--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
     </nav>
-    <div id="carouselExampleIndicators" class="carousel slide home-area section-margin" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide home-area section-margin border-radius" data-bs-ride="carousel">
       <ol class="carousel-indicators">
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
         <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
@@ -52,7 +52,7 @@
               <h1>Mega LCD TV For Sports</h1>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, placeat.</p>
               <h1 class="color-highlighter">$1200</h1>
-              <button class="btn text-white rounded btn-bg">Buy Now</button>
+              <button class="btn text-white border-radius btn-bg">Buy Now</button>
             </div>
             <div class="col-md-5">
               <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -100,21 +100,21 @@
   </header>
   <main class="container">
     <section class="container overflow-hidden section-margin">
-      <div class="row gx-5">
-        <div class="col">
-          <div class="p-3 rounded-3 bg-warning d-flex align-items-center justify-content-around">
+      <div class="row g-5">
+        <div class="col-sm-12 col-md-4">
+          <div class="p-3 border-radius bg-warning d-flex align-items-center justify-content-around">
             <h1 class="text-white">Watch</h1>
             <img class="w-25" src="images/categories/watch.png" alt="">
           </div>
         </div>
-        <div class="col">
-          <div class="p-3 rounded-3 bg-success d-flex align-items-center justify-content-around">
+        <div class="col-sm-12 col-md-4">
+          <div class="p-3 border-radius bg-success d-flex align-items-center justify-content-around">
             <h1 class="text-white">Bag</h1>
             <img class="w-25" src="images/categories/bag.png" alt="">
           </div>
         </div>
-        <div class="col">
-          <div class="p-3 rounded-3 bg-primary d-flex align-items-center justify-content-around">
+        <div class="col-sm-12 col-md-4">
+          <div class="p-3 border-radius bg-primary d-flex align-items-center justify-content-around">
             <h1 class="text-white">Shoes</h1>
             <img class="w-25" src="images/categories/shoes.png" alt="">
           </div>
@@ -125,7 +125,7 @@
       <h1>Shoes</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
@@ -160,7 +160,7 @@
               </p>
               <h5>$350</h5>
             </div>
-            <div class="card-footer card-style">
+            <div class="card-footer card-style border-radius">
               <button class="btn text-white rounded btn-bg">Buy Now >></button>
             </div>
           </div>
@@ -171,7 +171,7 @@
       <h1>Backpack</h1>
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Laltu Bag</h5>
@@ -179,26 +179,26 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             </div>
-            <div class="card-footer card-style">
+            <div class="card-footer card-style border-radius">
               <button class="btn text-white rounded btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Blue Niltu Bag</h5>
               <h5>$320</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
-            <div class="card-footer card-style">
+            <div class="card-footer card-style border-radius">
               <button class="btn text-white rounded btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card h-100 shadow card-style">
+          <div class="card h-100 shadow card-style border-radius">
             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Kaltu Bag</h5>
@@ -206,22 +206,27 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This card has even longer content than the first to show that equal height action.</p>
             </div>
-            <div class="card-footer card-style">
+            <div class="card-footer card-style border-radius">
               <button class="btn text-white rounded btn-bg">Buy Now >></button>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section id="subscribe" class="section-margin">
-      <h1>LET'S STAY IN TOUCH</h1>
-      <h5>Get updates on sales, specials and more</h5>
-      <div class="input-width">
-        <input class="input-border px-2" type="text">
+    <section id="subscribe" class="section-margin d-flex justify-content-center align-items-center border-radius bg-style">
+      <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <h5>Get updates on sales, specials and more</h5>
+        <div class="input-width border-radius">
+          <input class="input-border px-2" type="text">
+        </div>
+        <button class="btn text-white rounded btn-bg">SUBMIT</button>
       </div>
-      <button class="btn text-white rounded btn-bg">SUBMIT</button>
     </section>
   </main>
+  <footer class="section-margin text-center">
+    <p>©2021. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+  </footer>
 
   <script src="js/bootstrap.min.js"></script>
 </body>
